--- a/fontend/main.html
+++ b/fontend/main.html
@@ -10,9 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 
-    <script src="/js/Predict_AgeGender.js"></script>
+    <script src="/fontend/js/Predict_AgeGender.js"></script>
     <title>Website</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/fontend/css/style.css">
 </head>
 <body>
     <div id="container">
@@ -21,5 +21,5 @@
     </div>
     <button id="toggleButton" class="off">Turn On</button>
 </body>
-<script src="/js/detect_face.js"></script>
+<script src="/fontend/js/detect_face.js"></script>
 </html>
