--- a/fontend/index.html
+++ b/fontend/index.html
@@ -15,5 +15,5 @@
     <canvas class="output_canvas" width="600px" height="400px"></canvas>
   </div>
 </body>
-<script src="/pose_estimation.js"></script>
+<script src="/fontend/js/pose_estimation.js"></script>
 </html>
