--- a/fontend/main.html
+++ b/fontend/main.html
@@ -12,7 +12,7 @@
 
     <script src="/fontend/js/Predict_AgeGender.js"></script>
     <title>Website</title>
-    <link rel="stylesheet" href="/fontend/css/style.css">
+    <link rel="stylesheet" href="/fontend/css/style_main.css">
 </head>
 <body>
     <div class="main-container">
