--- a/fontend/index.html
+++ b/fontend/index.html
@@ -15,14 +15,25 @@
   <div class="main-container">
     <div class="form-container">
         <form action="" id="form">
-            <label>Name: </label>
-            <input type="user" id="name" disabled>
-
-            <label>Age: </label>
-            <input type="text" id="age" disabled>
-
-            <label>Gender:</label>
-            <input type="text" id="gender" disabled>
+            <div class="row-name">
+              <input type="text" id="name" disabled>
+            </div>
+            <div class="form-row">
+              <label>Age: </label>
+              <input type="text" id="age" disabled>
+            </div>
+            <div class="form-row">
+              <label>Gender:</label>
+              <input type="text" id="gender" disabled>
+            </div>
+            <div class="form-row">
+              <label>Height: (cm)</label>
+              <input type="text" id="height" disabled>
+            </div>
+            <div class="form-row">
+              <label>Weight: (kg)</label>
+              <input type="text" id="weight" disabled>
+            </div>
         </form>
     </div>
 
