--- a/fontend/main.html
+++ b/fontend/main.html
@@ -27,6 +27,12 @@
                 <label>Gender:</label>
                 <input type="text" id="gender" disabled>
 
+                <label>Height: (cm)</label>
+                <input type="text" id="height" placeholder="Your height (cm)">
+
+                <label>Weight: (kg)</label>
+                <input type="text" id="weight" placeholder="Your weight (kg)">
+
                 <button type="submit">Submit</button>
             </form>
         </div>
