--- a/fontend/index.html
+++ b/fontend/index.html
@@ -39,8 +39,14 @@
 
     <div id="container">
         <video id="camera" class="input_video" playsinline></video>
-        <canvas class="output_canvas"></canvas>
+        <div id="mini-container">
+          <canvas class="output_canvas"></canvas>
+          <video controls id="video_check">
+            <source src="video/" type="video/mp4">
+          </video>
+        </div>
     </div>
+    
 </div>
 
 </body>
