--- a/fontend/index.html
+++ b/fontend/index.html
@@ -41,8 +41,8 @@
         <video id="camera" class="input_video" playsinline></video>
         <div id="mini-container">
           <canvas class="output_canvas"></canvas>
-          <video controls id="video_check">
-            <source src="video/" type="video/mp4">
+          <video autoplay loop id="video_check">
+            <source src="video/squat.mp4" type="video/mp4">
           </video>
         </div>
     </div>
