--- a/fontend/index.html
+++ b/fontend/index.html
@@ -42,7 +42,7 @@
         <div id="mini-container">
           <canvas class="output_canvas"></canvas>
           <video autoplay loop id="video_check">
-            <source src="video/squat.mp4" type="video/mp4">
+            <source src="video/BicepsCurl.mp4" type="video/mp4">
           </video>
         </div>
     </div>
