new file:   backend/__pycache__/qdrant.cpython-310.pyc 	renamed:    fontend/css/style_index.css -> frontend/css/style_index.css 	renamed:    fontend/css/style_main.css -> frontend/css/style_main.css 	renamed:    fontend/images/a.jpg -> frontend/images/a.jpg 	renamed:    fontend/index.html -> frontend/index.html 	renamed:    fontend/js/Predict_AgeGender.js -> frontend/js/Predict_AgeGender.js 	renamed:    fontend/js/detect_face.js -> frontend/js/detect_face.js 	renamed:    fontend/js/pose_estimation.js -> frontend/js/pose_estimation.js 	renamed:    fontend/js/worker.js -> frontend/js/worker.js 	renamed:    fontend/main.html -> frontend/main.html 	renamed:    fontend/video/BicepsCurl.mp4 -> frontend/video/BicepsCurl.mp4 	renamed:    fontend/video/squat.mp4 -> frontend/video/squat.mp4

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -10,9 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 
-    <script src="/fontend/js/Predict_AgeGender.js"></script>
+    <script src="/frontend/js/Predict_AgeGender.js"></script>
     <title>Website</title>
-    <link rel="stylesheet" href="/fontend/css/style_main.css">
+    <link rel="stylesheet" href="/frontend/css/style_main.css">
 </head>
 <body>
     <div class="main-container">
@@ -45,6 +45,6 @@
 
     <button id="toggleButton" class="off">Turn On</button>
 </body>
-<script src="/fontend/js/detect_face.js"></script>
+<script src="/frontend/js/detect_face.js"></script>
 
 </html>
