modified:   frontend/js/Predict_AgeGender.js 	modified:   frontend/js/detect_face.js 	modified:   frontend/main.html

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -39,7 +39,7 @@
 
         <div id="container">
             <video id="camera" autoplay playsinline></video>
-            <canvas class="output_canvas"></canvas>
+            <canvas class="output_canvas" style="width: 640px; height: 480px;"></canvas>
         </div>
     </div>
 
