--- a/fontend/index.html
+++ b/fontend/index.html
@@ -27,12 +27,12 @@
               <input type="text" id="gender" disabled>
             </div>
             <div class="form-row">
-              <label>Height: (cm)</label>
-              <input type="text" id="height" disabled>
+              <label>BMI: </label>
+              <input type="text" id="bmi" disabled>
             </div>
             <div class="form-row">
-              <label>Weight: (kg)</label>
-              <input type="text" id="weight" disabled>
+              <label>Level: </label>
+              <input type="text" id="level" disabled>
             </div>
         </form>
     </div>
