--- a/fontend/main.html
+++ b/fontend/main.html
@@ -36,15 +36,15 @@
                 <label>Please select your level:</label>
                 <div class="radio">
                     <label for="beginner">
-                        <input type="radio" id="level" name="level" value="Beginner" checked>
+                        <input type="radio" id="beginner" name="level" value="Beginner">
                         Beginner
                     </label>
                     <label for="normal">
-                        <input type="radio" id="level" name="level" value="Normal">
+                        <input type="radio" id="normal" name="level" value="Normal">
                         Normal
                     </label>
                     <label for="advanced">
-                        <input type="radio" id="level" name="level" value="Advanced">
+                        <input type="radio" id="advanced" name="level" value="Advanced">
                         Advanced
                     </label>
                 </div>
