--- a/fontend/index.html
+++ b/fontend/index.html
@@ -16,7 +16,7 @@
   <!-- Navigation bar with toggle button -->
   <div class="topnav">
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars" id="toggleIcon"></i>
+      <i class="fa fa-remove" id="toggleIcon"></i>
     </a>
   </div>
 
