--- a/fontend/index.html
+++ b/fontend/index.html
@@ -15,7 +15,7 @@
 <body>
   
   <div class="topnav">
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="click_form()">
       <i class="fa fa-remove" id="toggleIcon"></i>
     </a>
   </div>
