--- a/fontend/index.html
+++ b/fontend/index.html
@@ -21,6 +21,7 @@
   </div>
 
   <div class="exercise-box">
+    <span>Dumbbell weight: <span id="db_weights"></span>(kg)</span>
     <span>Sets: <span id="sets"></span></span>
     <span>Reps: <span id="reps"></span></span>
     <span>Rest Time: <span id="rest"></span>s</span>
@@ -56,7 +57,7 @@
       <div id="mini-container">
         <canvas class="output_canvas"></canvas>
         <video autoplay loop id="video_check">
-          <source src="video/BicepsCurl.mp4" type="video/mp4">
+          <source src="video/dumbbell-boy.gif" type="video/mp4">
         </video>
       </div>
     </div>
