modified:   backend/__pycache__/Access_sheet.cpython-310.pyc 	modified:   fontend/css/style_main.css 	new file:   fontend/images/bg.png 	modified:   fontend/js/detect_face.js 	modified:   fontend/main.html

--- a/fontend/main.html
+++ b/fontend/main.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="title-card">
-        <h1>Welcome to Our Gym Tracker App</h1>
+        <h1>WELCOME TO EXERCISE SUPPORT WEB</h1>
     </div>
     <div class="main-container">
         <div class="form-container">
