--- a/fontend/index.html
+++ b/fontend/index.html
@@ -20,13 +20,19 @@
     </a>
   </div>
 
-  <div class="exercise-box">
-    <span>Dumbbell weight: <span id="db_weights"></span>(kg)</span>
-    <span>Sets: <span id="sets"></span></span>
-    <span>Reps: <span id="reps"></span></span>
-    <span>Rest Time: <span id="rest"></span>s</span>
+  <div class="top-page">
+    <div class="exercise-name">
+      <h3>Dumbbell curl</h3>
+    </div>
+  
+    <div class="exercise-box">
+      <span>Dumbbell weight: <span id="db_weights"></span>(kg)</span>
+      <span>Sets: <span id="sets"></span></span>
+      <span>Reps: <span id="reps"></span></span>
+      <span>Rest Time: <span id="rest"></span>s</span>
+    </div>  
   </div>
-
+  
   <div class="main-container">
     <div class="form-container" id="formContainer">
       <form action="" id="form">
