--- a/fontend/index.html
+++ b/fontend/index.html
@@ -20,18 +20,13 @@
     </a>
   </div>
 
-  <div class="top-page">
-    <div class="exercise-name">
-      <h3>Dumbbell curl</h3>
-    </div>
-  
-    <div class="exercise-box">
-      <span>Dumbbell weight: <span id="db_weights"></span>(kg)</span>
-      <span>Sets: <span id="sets"></span></span>
-      <span>Reps: <span id="reps"></span></span>
-      <span>Rest Time: <span id="rest"></span>s</span>
-    </div>  
-  </div>
+  <div class="exercise-box">
+    <h3 id="exercise-name"></h3>
+    <span>Dumbbell weight: <span id="db_weights"></span>(kg)</span>
+    <span>Sets: <span id="sets"></span></span>
+    <span>Reps: <span id="reps"></span></span>
+    <span>Rest Time: <span id="rest"></span>s</span>
+  </div>  
   
   <div class="main-container">
     <div class="form-container" id="formContainer">
@@ -63,7 +58,7 @@
       <div id="mini-container">
         <canvas class="output_canvas"></canvas>
         <video autoplay loop id="video_check">
-          <source src="video/dumbbell-boy.gif" type="video/mp4">
+          <source src="video/BicepsCurl.mp4" type="video/mp4">
         </video>
       </div>
     </div>
