--- a/frontend/main.html
+++ b/frontend/main.html
@@ -14,8 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 
     <!-- Custom Scripts and Styles -->
-    <link rel="stylesheet" href="/fontend/css/style_main.css">
-    <script src="/fontend/js/Predict_AgeGender.js"></script>
+    <link rel="stylesheet" href="/frontend/css/style_main.css">
+    <script src="/frontend/js/Predict_AgeGender.js"></script>
 </head>
 <body>
     <div class="title-card">
@@ -68,6 +68,6 @@
     <button id="toggleButton" class="off">Turn On Camera</button>
 
     <!-- Additional JavaScript -->
-    <script src="/fontend/js/detect_face.js"></script>
+    <script src="/frontend/js/detect_face.js"></script>
 </body>
 </html>
