--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,9 +20,9 @@
     </a>
   </div>
 
-  <div class="exercise-box">
+  <div class="exercise-box" id="exercise-box">
     <h3 id="exercise-name"></h3>
-    <span>Dumbbell weight: <span id="db_weights"></span>(kg)</span>
+    <span id="dumbbell">Dumbbell weight: <span id="db_weights"></span>(kg)</span>
     <span>Sets: <span id="sets"></span></span>
     <span>Reps: <span id="reps"></span></span>
     <span>Rest Time: <span id="rest"></span>s</span>
