modified:   backend/__pycache__/qdrant.cpython-310.pyc 	modified:   frontend/css/style_index.css 	modified:   frontend/css/style_main.css 	modified:   frontend/js/detect_face.js 	modified:   frontend/main.html

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -22,7 +22,7 @@
         <h1>WELCOME TO EXERCISE SUPPORT WEB</h1>
     </div>
     <div class="main-container">
-        <div class="form-container">
+        <div class="form_container" style="display: block; margin-bottom: 0px;">
             <form action="" id="form">
                 <label for="name">Name: </label>
                 <input type="text" id="name" placeholder="Your name">
