--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,8 +57,8 @@
       <video id="camera" class="input_video" playsinline></video>
       <div id="mini-container">
         <canvas class="output_canvas"></canvas>
-        <video autoplay loop id="video_check">
-          <source src="video/BicepsCurl.mp4" type="video/mp4">
+        <video id="video_check" autoplay loop muted>
+          <source src="video/BicepsCurl.mp4" type="video/mp4" id="source">
         </video>
       </div>
     </div>
