--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,8 +26,10 @@
     <span>Sets: <span id="sets"></span></span>
     <span>Reps: <span id="reps"></span></span>
     <span>Rest Time: <span id="rest"></span>s</span>
-  </div>  
-  
+  </div> 
+   
+  <div id="notification-container"></div>
+
   <div class="main-container">
     <div class="form-container" id="formContainer">
       <form action="" id="form">
