Thêm id vào để phục vụ cho bài toán update payload DB hiện tại tới chỗ định nghĩa main.py

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,7 +60,7 @@
       <div id="mini-container">
         <canvas class="output_canvas"></canvas>
 
-        <form id="center-form" class="center-form">
+        <form id="check-form" class="check-form">
           <div class="form-row">
             <label for="option1">Fatigue level</label>
             <input type="range" id="slider1" min="1" max="10" value="5">
