add page home and edit name files

--- a/frontend/login_register.html
+++ b/frontend/login_register.html
@@ -14,13 +14,14 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 
     <!-- Custom Scripts and Styles -->
-    <link rel="stylesheet" href="/frontend/css/style_main.css">
+    <link rel="stylesheet" href="/frontend/css/style_login.css">
     <script src="/frontend/js/Predict_AgeGender.js"></script>
 </head>
 <body>
-    <div class="title-card">
-        <h1>WELCOME TO EXERCISE SUPPORT WEB</h1>
-    </div>
+    <header class="header" id="header">
+        <div class="logo">Gym<span>AI</span></div>
+    </header>
+
     <div class="main-container">
         <div class="form_container" style="display: block; margin-bottom: 0px;">
             <form action="" id="form">
