--- a/frontend/check_exercise.html
+++ b/frontend/check_exercise.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose" crossorigin="anonymous"></script>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Website</title>
+  <title>Exercises</title>
   <link rel="stylesheet" href="/frontend/css/style_exercise.css">
 </head>
 
