--- a/frontend/login_register.html
+++ b/frontend/login_register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+    <title>Login|Register</title>
 
     <!-- External Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header" id="header">
-        <div class="logo">Gym<span>AI</span></div>
+        <div class="logo">H&P<span>AI</span></div>
     </header>
 
     <div class="main-container">
